src/log/build_2024-05-29_16-45-22/blackjack/stderr.log
  File "/home/mustache/ros2_ws/src/install/blackjack/lib/python3.10/site-packages/blackjack/motor_control.py", line 75
    def check_for_player()
                          ^
SyntaxError: expected ':'

